--- a/BlazorNitflex/_Imports.razor
+++ b/BlazorNitflex/_Imports.razor
@@ -5,3 +5,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorNitflex
+@using Radzen
+@using Radzen.Blazor
