--- a/BlazorNitflex/wwwroot/css/app.css
+++ b/BlazorNitflex/wwwroot/css/app.css
@@ -1,3 +1,9 @@
+@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+
+html, body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 h1:focus {
     outline: none;
 }
@@ -30,3 +36,11 @@ h1:focus {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+/*body {
+    background-image: url('https://www.cnet.com/a/img/resize/5daaedf6d19f6ad894d49f41ff290e59b8992eab/hub/2024/03/01/5bfc9ca7-e663-48e4-9293-fba938393a18/apple-tv-plus-great-movies-special-collection.jpg?auto=webp&width=1920');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+}*/
