--- a/BlazorNitflex/App.razor
+++ b/BlazorNitflex/App.razor
@@ -6,7 +6,7 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                    <p>You must be logged in to access this page.</p>
+                    <p>Access denied. Calling the FBI</p>
                 </NotAuthorized>
             </AuthorizeRouteView>
         </Found>
