--- a/BlazorNitflex/BlazorComponents/WatchMovieComponent.razor
+++ b/BlazorNitflex/BlazorComponents/WatchMovieComponent.razor
@@ -2,7 +2,7 @@
 
 @if (string.IsNullOrEmpty(MovieLink) is false)
 {
-    <iframe width="100%" height="315" src="@MovieLink" frameborder="0" allowfullscreen />
+    <iframe width="1000" height="800" src="@MovieLink" frameborder="0" allowfullscreen />
 }
 else
 {
