Nu kan man registere sig selv til NitFlex

--- a/BlazorNitflex/Layouts/MainLayout.razor
+++ b/BlazorNitflex/Layouts/MainLayout.razor
@@ -14,7 +14,7 @@
     </div>
 
     <div style="display: flex; gap:1rem;">
-        <RadzenLink Text="My movies" Path="/" Style="color:white; font-size: larger" />
+        <RadzenLink Text="My movies" Path="/mymovies" Style="color:white; font-size: larger" />
         <RadzenLink Text="Movies" Path="/movies" Style="color:white; font-size: larger" />
         @if (isAdmin)
         {
