--- a/BlazorNitflex/Pages/Login.razor
+++ b/BlazorNitflex/Pages/Login.razor
@@ -14,7 +14,7 @@
 
 
 
-<div class="login-container">
+<div>
     <RadzenCard Style="max-width: 400px; width: 100%; margin: 0 auto; padding: 20px;">
         <RadzenHeading Size="H3" Style="text-align: center;">Login</RadzenHeading>
         <RadzenTemplateForm Data="@loginModel" TItem="LoginModel" Submit="@HandleLogin">
