--- a/BlazorNitflex/Pages/MyMovies.razor
+++ b/BlazorNitflex/Pages/MyMovies.razor
@@ -1,11 +1,12 @@
 ﻿@using BlazorNitflex.Layouts
-
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize(Roles = "Admin, User")]
 @layout MainLayout
 @page "/mymovies"
 
 
 <h3>Coming soon! Access this feature early by buying NitFlex Premium for only $99.99. 
-    Send money with your email through mobilepay to the number 88888888
+    Mobilepay number: 88888888
 </h3>
 
 @code {
